Fix z-index on dropdown menu

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -31,6 +31,7 @@ header {
         .dropdown-menu {
           position: absolute;
           width: 22em;
+          z-index: 10;
         }
       }
     }
@@ -68,6 +69,7 @@ header {
     ul#anchor-menu {
       position: fixed;
       width: 28%;
+      z-index: 1;
     }
   }
 }
